--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'belleza';
     background-color: #fdf8f7;
     color: #4f4f4f;
     margin: 0;
@@ -11,6 +11,11 @@ body {
     padding: 20px;
     
   }
+
+  .hero{
+   
+height: 500px;
+  }
   
   h1 {
     font-size: 24px;
@@ -18,7 +23,7 @@ body {
   }
   
   .couple-names {
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Great Vibes';
     font-size: 68px;
     margin: 50px 0;
     color: #c59d5f;
@@ -26,6 +31,7 @@ body {
   
   .wedding-info p {
     font-size: 20px;
+    
   }
   
   .countdown {
